--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,9 @@ server.port=9000
 spring.data.mongodb.host=localhost
 spring.data.mongodb.post=27017
 spring.data.mongodb.database=mongo_dev
+
+#logging.level.org.springframework.web: INFO
+#logging.pattern.file= "%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36}.%M - %msg%n"
+
+# modify path according to local address
+#logging.file=C:\\jsondata\\emptyFiles\\Application.log 
